Some project setup changes after installing on linux. Indent and tab size is now 3 spaces and all files have been reformated. I hope it automatically comes through on windows when codeStyleConfig.xml is fetched. Some changes to gradle setup since it didn't work perfectly, but the solution was to add all javafx modules to the vm options in the launch config.